# ComPWA-ampform-dpd

./: .cspell.json  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: conf.py  index.ipynb  jpsi2ksp.ipynb  lc2pkpi.ipynb  references.bib  serialization.ipynb  xib2pkk.ipynb
docs/comparison/: d2kkk.ipynb  jpsi2phipipi.ipynb  jpsi2pipipi.ipynb
src/ampform_dpd/: __init__.py  _attrs.py  angles.py  decay.py  spin.py
src/ampform_dpd/adapter/: qrules.py
src/ampform_dpd/dynamics/: __init__.py  builder.py
src/ampform_dpd/io/: __init__.py  cached.py
src/ampform_dpd/io/serialization/: amplitude.py  decay.py  dynamics.py
tests/: test_cached.py  test_decay.py  test_dpd_builder.py  test_io.py
tests/adapter/: test_qrules.py
tests/io_serialization/: test_amplitude.py  test_decay.py
